{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 13,
  "lineage": "01f7ff4d-0cd0-2260-2832-577c917ff687",
  "resources": [
    {
      "mode": "data",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-0e2e87867e9e2ccd2",
            "arn": "arn:aws:ec2:us-east-1:067027761174:instance/i-0360e495e4f4131a6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "filter": [
              {
                "name": "tag:eks:nodegroup-name",
                "values": [
                  "NG-tech"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "iam_instance_profile": "eks-6cc9188d-c6ab-ecc6-25e3-c87a550599e2",
            "id": "i-0360e495e4f4131a6",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "launch_time": "2024-09-27T01:33:20Z",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0e2dfddc57c57f150",
            "placement_partition_number": 0,
            "private_dns": "ip-172-31-90-107.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.90.107",
            "public_dns": "ec2-3-82-246-158.compute-1.amazonaws.com",
            "public_ip": "3.82.246.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01edcb7126da0c299",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "secondary_private_ips": [
              "172.31.82.164",
              "172.31.82.3",
              "172.31.84.187",
              "172.31.87.148",
              "172.31.90.158"
            ],
            "security_groups": [
              "eks-cluster-sg-tech-3555990"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0354b4e866aa2e0e4",
            "tags": {
              "eks:cluster-name": "tech",
              "eks:nodegroup-name": "NG-tech",
              "k8s.io/cluster-autoscaler/enabled": "true",
              "k8s.io/cluster-autoscaler/tech": "owned",
              "kubernetes.io/cluster/tech": "owned"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-064c79b430e96ebf9"
            ]
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "existing_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067027761174:security-group/sg-064c79b430e96ebf9",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "eks-cluster-sg-tech-3555990"
                ]
              }
            ],
            "id": "sg-064c79b430e96ebf9",
            "name": "eks-cluster-sg-tech-3555990",
            "tags": {
              "Name": "eks-cluster-sg-tech-3555990",
              "kubernetes.io/cluster/tech": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fac7a1fe56de12b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:loadbalancer/app/ALB-tech/6cb005c56ade0748",
            "arn_suffix": "app/ALB-tech/6cb005c56ade0748",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-tech-1002430229.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:067027761174:loadbalancer/app/ALB-tech/6cb005c56ade0748",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-tech",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02023e34394b9efba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0354b4e866aa2e0e4"
              },
              {
                "subnet_id": "subnet-0973e7bb30f9de47c"
              },
              {
                "subnet_id": "subnet-0dba9cc714234362b"
              }
            ],
            "subnets": [
              "subnet-0354b4e866aa2e0e4",
              "subnet-0973e7bb30f9de47c",
              "subnet-0dba9cc714234362b"
            ],
            "vpc_id": "vpc-06fac7a1fe56de12b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:listener/app/ALB-tech/6cb005c56ade0748/a15f4cb38b2654ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:targetgroup/TG-tech/67d16f99cf664733",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067027761174:listener/app/ALB-tech/6cb005c56ade0748/a15f4cb38b2654ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:loadbalancer/app/ALB-tech/6cb005c56ade0748",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:targetgroup/TG-tech/67d16f99cf664733",
            "arn_suffix": "targetgroup/TG-tech/67d16f99cf664733",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "30000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:067027761174:targetgroup/TG-tech/67d16f99cf664733",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "TG-tech",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06fac7a1fe56de12b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:067027761174:targetgroup/TG-tech/67d16f99cf664733-20240927013456434500000002",
            "port": 30000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:067027761174:targetgroup/TG-tech/67d16f99cf664733",
            "target_id": "i-0360e495e4f4131a6"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_eks_cluster.eks-cluster",
            "aws_eks_node_group.node-group",
            "aws_lb_listener.listener",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "data.aws_instance.ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067027761174:security-group/sg-02023e34394b9efba",
            "description": "Tech Challenger",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02023e34394b9efba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-tech",
            "name_prefix": "",
            "owner_id": "067027761174",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06fac7a1fe56de12b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-560784136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-064c79b430e96ebf9",
            "security_group_rule_id": "sgr-08d2b496736b7f3f3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_eks_cluster.eks-cluster",
            "aws_eks_node_group.node-group",
            "aws_lb_listener.listener",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "data.aws_security_group.existing_sg"
          ]
        }
      ]
    }
  ]
}